src/snapshots/alma__parser__tests__expression_parser-66.snap
---
source: src/parser.rs
expression: "parse(\"a .b\")"

---
Input:

a .b

Result:

Node {
    start: 0,
    end: 4,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall(
            Node {
                start: 0,
                end: 1,
                line: 1,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        Node {
                            start: 0,
                            end: 1,
                            line: 1,
                            column: 0,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                            },
                        },
                    ),
                },
            },
            [
                Node {
                    start: 2,
                    end: 4,
                    line: 1,
                    column: 2,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: PropAccessLambda(
                            Node {
                                start: 3,
                                end: 4,
                                line: 1,
                                column: 3,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 2,
                                    },
                                },
                            },
                        ),
                    },
                },
            ],
        ),
    },
}
