src/snapshots/alma__parser__tests__expression_parser-67.snap
---
source: src/parser.rs
expression: "parse(\".a b\")"

---
Input:

.a b

Result:

Node {
    start: 0,
    end: 4,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: FnCall(
            Node {
                start: 0,
                end: 2,
                line: 1,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: PropAccessLambda(
                        Node {
                            start: 1,
                            end: 2,
                            line: 1,
                            column: 1,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                            },
                        },
                    ),
                },
            },
            [
                Node {
                    start: 3,
                    end: 4,
                    line: 1,
                    column: 3,
                    value: Expression_ {
                        typ: RefCell {
                            value: None,
                        },
                        expr: Identifier(
                            None,
                            Identifier(
                                Node {
                                    start: 3,
                                    end: 4,
                                    line: 1,
                                    column: 3,
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 2,
                                        },
                                    },
                                },
                            ),
                        ),
                    },
                },
            ],
        ),
    },
}
