src/snapshots/alma__parser__tests__expression_parser-7.snap
---
source: src/parser.rs
expression: "parse(\"variable_one\")"

---
Input:

variable_one

Result:

Node {
    start: 0,
    end: 12,
    line: 1,
    column: 0,
    value: Identifier(
        Node {
            start: 0,
            end: 12,
            line: 1,
            column: 0,
            value: Identifier_ {
                name: "variable_one",
            },
        },
    ),
}
