src/snapshots/alma__parser__tests__expression_parser-70.snap
---
source: src/parser.rs
expression: "parse(\"{ 5 | x = 1, y = 3 }\")"

---
Input:

{ 5 | x = 1, y = 3 }

Result:

Node {
    start: 0,
    end: 20,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: RecordUpdate(
            Node {
                start: 2,
                end: 3,
                line: 1,
                column: 2,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Float(
                        5.0,
                    ),
                },
            },
            [
                (
                    Node {
                        start: 6,
                        end: 7,
                        line: 1,
                        column: 6,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 1,
                            },
                        },
                    },
                    Node {
                        start: 10,
                        end: 11,
                        line: 1,
                        column: 10,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                1.0,
                            ),
                        },
                    },
                ),
                (
                    Node {
                        start: 13,
                        end: 14,
                        line: 1,
                        column: 13,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    Node {
                        start: 17,
                        end: 18,
                        line: 1,
                        column: 17,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                3.0,
                            ),
                        },
                    },
                ),
            ],
        ),
    },
}
