src/snapshots/alma__parser__tests__expression_parser-72.snap
---
source: src/parser.rs
expression: "parse(\"A\")"

---
Input:

A

Result:

Node {
    start: 0,
    end: 1,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: ModuleAccess(
            ModuleName {
                parts: [
                    Node {
                        start: 0,
                        end: 1,
                        line: 1,
                        column: 0,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 1,
                            },
                        },
                    },
                ],
                full_name: SymbolU32 {
                    value: 1,
                },
            },
        ),
    },
}
