src/snapshots/alma__parser__tests__expression_parser-74.snap
---
source: src/parser.rs
expression: "parse(\"A.B.C\")"

---
Input:

A.B.C

Result:

Node {
    start: 0,
    end: 5,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Identifier(
            Some(
                ModuleName {
                    parts: [
                        Node {
                            start: 0,
                            end: 1,
                            line: 1,
                            column: 0,
                            value: CapitalizedIdentifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                            },
                        },
                        Node {
                            start: 2,
                            end: 3,
                            line: 1,
                            column: 2,
                            value: CapitalizedIdentifier_ {
                                name: SymbolU32 {
                                    value: 2,
                                },
                            },
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 5,
                    },
                },
            ),
            CapitalizedIdentifier(
                Node {
                    start: 4,
                    end: 5,
                    line: 1,
                    column: 4,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 3,
                        },
                    },
                },
            ),
        ),
    },
}
