src/snapshots/alma__parser__tests__expression_parser-76.snap
---
source: src/parser.rs
expression: "parse(\"A.B.c\")"

---
Input:

A.B.c

Result:

Node {
    start: 0,
    end: 5,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: PropAccess(
            Node {
                start: 0,
                end: 3,
                line: 1,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: ModuleAccess(
                        ModuleName {
                            parts: [
                                Node {
                                    start: 0,
                                    end: 1,
                                    line: 1,
                                    column: 0,
                                    value: ModuleIdentifier_ {
                                        name: SymbolU32 {
                                            value: 1,
                                        },
                                    },
                                },
                                Node {
                                    start: 2,
                                    end: 3,
                                    line: 1,
                                    column: 2,
                                    value: ModuleIdentifier_ {
                                        name: SymbolU32 {
                                            value: 2,
                                        },
                                    },
                                },
                            ],
                            full_name: SymbolU32 {
                                value: 3,
                            },
                        },
                    ),
                },
            },
            Node {
                start: 4,
                end: 5,
                line: 1,
                column: 4,
                value: Identifier_ {
                    name: SymbolU32 {
                        value: 4,
                    },
                },
            },
        ),
    },
}
